tests222/tests2/test318.out
lli: <stdin>:1:1: error: expected top-level entity
line 1: lexical error
^
